<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fangfang.android.buclaimssystem.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:background="@color/primary_light">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_message"
        android:layout_gravity="left"
        android:textSize="16sp"
        android:textColor="@color/primary_text"
        android:layout_marginBottom="10dp" />

    <ImageView
        android:id="@+id/main_imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="Simple to claim. Easy to use."
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        android:layout_marginBottom="5dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="25dp"
        android:layout_gravity="right">
        <Button
            android:id="@+id/main_btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_up"
            android:layout_marginBottom="5dp"
            android:onClick="signUp"/>

        <Button
            android:id="@+id/main_btn_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:layout_marginBottom="5dp"
            android:onClick="signIn"/>


    </LinearLayout>
</LinearLayout>
